Updated to Scala 2.11 and Sbt 0.13.2.